@@ -2,7 +2,6 @@ package io.dataease.service.sys.log;
 
 
 import cn.hutool.core.date.DateUtil;
-
 import com.google.gson.Gson;
 import io.dataease.auth.api.dto.CurrentUserDto;
 import io.dataease.commons.constants.ParamConstants;
@@ -11,14 +10,12 @@ import io.dataease.commons.utils.AuthUtils;
 import io.dataease.commons.utils.BeanUtils;
 import io.dataease.commons.utils.IPUtils;
 import io.dataease.commons.utils.ServletUtils;
-import io.dataease.controller.sys.base.ConditionEntity;
-import io.dataease.controller.sys.request.KeyGridRequest;
+import io.dataease.controller.sys.request.LogGridRequest;
 import io.dataease.dto.SysLogDTO;
 import io.dataease.dto.SysLogGridDTO;
 import io.dataease.dto.log.FolderItem;
 import io.dataease.exception.DataEaseException;
 import io.dataease.ext.ExtSysLogMapper;
-import io.dataease.ext.query.GridExample;
 import io.dataease.i18n.Translator;
 import io.dataease.plugins.common.base.domain.SysLogExample;
 import io.dataease.plugins.common.base.domain.SysLogWithBLOBs;
@@ -35,6 +32,7 @@ import javax.annotation.Resource;
 import javax.servlet.http.HttpServletResponse;
 import java.io.OutputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -42,26 +40,26 @@ import java.util.stream.Collectors;
 public class LogService {
 
     private static final String LOG_RETENTION = "30";
-    private Gson gson = new Gson();
+    private final Gson gson = new Gson();
 
     // 仪表板的额外操作 分享以及公共链接
-    private static Integer[] panel_ext_ope = {4, 5, 8, 9, 10};
+    private static final Integer[] panel_ext_ope = {4, 5, 8, 9, 10};
 
-    private static Integer[] link_ext_ope = {13, 14};
+    private static final Integer[] link_ext_ope = {13, 14};
 
     // 驱动文件操作 上传， 删除
-    private static Integer[] driver_file_ope = {11, 3};
+    private static final Integer[] driver_file_ope = {11, 3};
 
-    private static Integer[] COMMON_SOURCE = {1, 2, 3, 6, 7, 8, 9};
+    private static final Integer[] COMMON_SOURCE = {1, 2, 3, 6, 7, 8, 9, 12};
 
     // 增 改 删  针对公共资源的操作
-    private static Integer[] COMMON_SOURCE_OPERATE = {1, 2, 3};
+    private static final Integer[] COMMON_SOURCE_OPERATE = {1, 2, 3};
 
     // 授权相关操作
-    private static Integer[] AUTH_OPERATE = {6, 7};
+    private static final Integer[] AUTH_OPERATE = {6, 7};
 
     // 授权相关资源 数据源 仪表板 数据集 菜单
-    private static Integer[] AUTH_SOURCE = {1, 2, 3, 11};
+    private static final Integer[] AUTH_SOURCE = {1, 2, 3, 11};
 
 
     @Resource
@@ -95,100 +93,10 @@ public class LogService {
     }
 
 
-    public KeyGridRequest logRetentionProxy(KeyGridRequest request) {
-        String value = systemParameterService.getValue(ParamConstants.BASIC.LOG_TIME_OUT.getValue());
-        value = StringUtils.isBlank(value) ? LOG_RETENTION : value;
-        int logRetention = Integer.parseInt(value);
-        Calendar instance = Calendar.getInstance();
+    public List<SysLogGridDTO> query(LogGridRequest request) {
 
-        Calendar startInstance = (Calendar) instance.clone();
-        startInstance.add(Calendar.DATE, -logRetention);
-        startInstance.set(Calendar.HOUR_OF_DAY, 0);
-        startInstance.set(Calendar.MINUTE, 0);
-        startInstance.set(Calendar.SECOND, 0);
-        long startTime = startInstance.getTimeInMillis();
-
-        Calendar endInstance = (Calendar) instance.clone();
-        endInstance.add(Calendar.DATE, 1);
-        endInstance.set(Calendar.HOUR_OF_DAY, 0);
-        endInstance.set(Calendar.MINUTE, 0);
-        endInstance.set(Calendar.SECOND, 0);
-        long endTime = endInstance.getTimeInMillis();
-
-
-        List<ConditionEntity> conditions = request.getConditions();
-        if (CollectionUtils.isNotEmpty(conditions) && conditions.stream().anyMatch(condition -> StringUtils.equals("time", condition.getField()))) {
-            conditions.forEach(condition -> {
-                if (StringUtils.equals("time", condition.getField()) && startTime > ((List<Long>) condition.getValue()).get(0)) {
-                    ((List<Long>) condition.getValue()).set(0, startTime);
-                }
-            });
-        } else {
-            ConditionEntity conditionEntity = new ConditionEntity();
-            conditionEntity.setField("time");
-            conditionEntity.setOperator("between");
-            List<Long> times = new ArrayList<>();
-            times.add(startTime);
-            times.add(endTime);
-            conditionEntity.setValue(times);
-            conditions.add(conditionEntity);
-        }
-        return request;
-    }
-
-
-    public List<SysLogGridDTO> query(KeyGridRequest request) {
-
-
-        request = detailRequest(request);
-        String keyWord = request.getKeyWord();
-        List<String> ids = null;
-        GridExample gridExample = request.convertExample();
-        gridExample.setExtendCondition(keyWord);
-
-        LogQueryParam logQueryParam = gson.fromJson(gson.toJson(gridExample), LogQueryParam.class);
-        if (StringUtils.isNotBlank(keyWord)) {
-            List<FolderItem> types = types();
-            ids = types.stream().filter(item -> item.getName().toLowerCase().contains(keyWord.toLowerCase())).map(FolderItem::getId).collect(Collectors.toList());
-            if (CollectionUtils.isNotEmpty(ids))
-                logQueryParam.setUnionIds(ids);
-        }
-        List<SysLogWithBLOBs> voLogs = extSysLogMapper.query(logQueryParam);
-        List<SysLogGridDTO> dtos = voLogs.stream().map(this::convertDTO).collect(Collectors.toList());
-        return dtos;
-    }
-
-    private KeyGridRequest detailRequest(KeyGridRequest request) {
-        List<ConditionEntity> conditions = request.getConditions();
-        if (CollectionUtils.isNotEmpty(conditions)) {
-
-            ConditionEntity uninCondition = null;
-            int matchIndex = -1;
-            for (int i = 0; i < conditions.size(); i++) {
-                ConditionEntity conditionEntity = conditions.get(i);
-                String field = conditionEntity.getField();
-                Object value = conditionEntity.getValue();
-
-                if (StringUtils.isNotBlank(field) && StringUtils.equals("optype", field) && ObjectUtils.isNotEmpty(value)) {
-                    matchIndex = i;
-                    uninCondition = new ConditionEntity();
-
-                    List<String> values = (List<String>) value;
-                    uninCondition.setField("concat(operate_type, '-de-', source_type)");
-
-                    List<String> uninValue = values.stream().map(v -> v.replace("-", "-de-")).collect(Collectors.toList());
-
-                    uninCondition.setValue(uninValue);
-                    uninCondition.setOperator(conditionEntity.getOperator());
-                }
-            }
-            if (matchIndex >= 0) {
-                conditions.remove(matchIndex);
-
-                if (ObjectUtils.isNotEmpty(uninCondition)) conditions.add(uninCondition);
-            }
-        }
-        return request;
+        List<SysLogWithBLOBs> voLogs = extSysLogMapper.query(request);
+        return voLogs.stream().map(this::convertDTO).collect(Collectors.toList());
     }
 
 
@@ -198,14 +106,12 @@ public class LogService {
         List<FolderItem> results = new ArrayList<>();
 
 
-        for (int i = 0; i < COMMON_SOURCE.length; i++) {
+        for (Integer sourceVal : COMMON_SOURCE) {
 
-            Integer sourceVal = COMMON_SOURCE[i];
             String sourceTypeName = SysLogConstants.sourceTypeName(sourceVal);
 
-            for (int j = 0; j < COMMON_SOURCE_OPERATE.length; j++) {
+            for (Integer operateVal : COMMON_SOURCE_OPERATE) {
 
-                Integer operateVal = COMMON_SOURCE_OPERATE[j];
                 String operateTypeName = SysLogConstants.operateTypeName(operateVal);
                 FolderItem folderItem = new FolderItem();
                 folderItem.setId(operateVal + "-" + sourceVal);
@@ -215,23 +121,21 @@ public class LogService {
         }
 
 
-        for (int i = 0; i < driver_file_ope.length; i++) {
+        for (Integer integer : driver_file_ope) {
             SysLogConstants.SOURCE_TYPE sourceType = SysLogConstants.SOURCE_TYPE.DRIVER_FILE;
             FolderItem folderItem = new FolderItem();
-            folderItem.setId(driver_file_ope[i] + "-" + sourceType.getValue());
-            String operateTypeName = SysLogConstants.operateTypeName(driver_file_ope[i]);
+            folderItem.setId(integer + "-" + sourceType.getValue());
+            String operateTypeName = SysLogConstants.operateTypeName(integer);
             String sourceTypeName = sourceType.getName();
             folderItem.setName(Translator.get(operateTypeName) + Translator.get(sourceTypeName));
             results.add(folderItem);
         }
 
-        for (int i = 0; i < AUTH_SOURCE.length; i++) {
-            Integer sourceVal = AUTH_SOURCE[i];
+        for (Integer sourceVal : AUTH_SOURCE) {
             String sourceTypeName = SysLogConstants.sourceTypeName(sourceVal);
 
-            for (int j = 0; j < AUTH_OPERATE.length; j++) {
+            for (Integer operateVal : AUTH_OPERATE) {
 
-                Integer operateVal = AUTH_OPERATE[j];
                 String operateTypeName = SysLogConstants.operateTypeName(operateVal);
                 FolderItem folderItem = new FolderItem();
                 folderItem.setId(operateVal + "-" + sourceVal);
@@ -240,21 +144,21 @@ public class LogService {
             }
         }
 
-        for (int i = 0; i < panel_ext_ope.length; i++) {
+        for (Integer integer : panel_ext_ope) {
             SysLogConstants.SOURCE_TYPE sourceType = SysLogConstants.SOURCE_TYPE.PANEL;
             FolderItem folderItem = new FolderItem();
-            folderItem.setId(panel_ext_ope[i] + "-" + sourceType.getValue());
-            String operateTypeName = SysLogConstants.operateTypeName(panel_ext_ope[i]);
+            folderItem.setId(integer + "-" + sourceType.getValue());
+            String operateTypeName = SysLogConstants.operateTypeName(integer);
             String sourceTypeName = sourceType.getName();
             folderItem.setName(Translator.get(operateTypeName) + Translator.get(sourceTypeName));
             results.add(folderItem);
         }
 
-        for (int i = 0; i < link_ext_ope.length; i++) {
+        for (Integer integer : link_ext_ope) {
             SysLogConstants.SOURCE_TYPE sourceType = SysLogConstants.SOURCE_TYPE.LINK;
             FolderItem folderItem = new FolderItem();
-            folderItem.setId(link_ext_ope[i] + "-" + sourceType.getValue());
-            String operateTypeName = SysLogConstants.operateTypeName(link_ext_ope[i]);
+            folderItem.setId(integer + "-" + sourceType.getValue());
+            String operateTypeName = SysLogConstants.operateTypeName(integer);
             String sourceTypeName = sourceType.getName();
             folderItem.setName(Translator.get(operateTypeName) + Translator.get(sourceTypeName));
             results.add(folderItem);
@@ -284,13 +188,10 @@ public class LogService {
 
     private List<FolderItem> typesByArr(Integer[] opTypes, Integer[] sourceTypes) {
         List<FolderItem> results = new ArrayList<>();
-        for (int i = 0; i < sourceTypes.length; i++) {
-            Integer sourceVal = sourceTypes[i];
+        for (Integer sourceVal : sourceTypes) {
             String sourceTypeName = SysLogConstants.sourceTypeName(sourceVal);
 
-            for (int j = 0; j < opTypes.length; j++) {
-
-                Integer operateVal = opTypes[j];
+            for (Integer operateVal : opTypes) {
 
                 String operateTypeName = SysLogConstants.operateTypeName(operateVal);
                 FolderItem folderItem = new FolderItem();
@@ -339,7 +240,7 @@ public class LogService {
             sysLogWithBLOBs.setUserId(user.getUserId());
             sysLogWithBLOBs.setLoginName(user.getUsername());
             sysLogWithBLOBs.setNickName(user.getNickName());
-        } else if (sysLogDTO.getOperateType() == SysLogConstants.OPERATE_TYPE.LOGIN.getValue()) {
+        } else if (Objects.equals(sysLogDTO.getOperateType(), SysLogConstants.OPERATE_TYPE.LOGIN.getValue())) {
             sysLogWithBLOBs.setUserId(Long.parseLong(sysLogDTO.getSourceId()));
             sysLogWithBLOBs.setLoginName(sysLogDTO.getSourceName());
             sysLogWithBLOBs.setNickName(sysLogDTO.getSourceName());
@@ -350,24 +251,12 @@ public class LogService {
     }
 
 
-    public void exportExcel(KeyGridRequest request) throws Exception {
-        request = logRetentionProxy(request);
-        request = detailRequest(request);
-        String keyWord = request.getKeyWord();
-        List<String> ids = null;
+    public void exportExcel(LogGridRequest request) throws Exception {
+
         HttpServletResponse response = ServletUtils.response();
         OutputStream outputStream = response.getOutputStream();
         try {
-            GridExample gridExample = request.convertExample();
-            gridExample.setExtendCondition(keyWord);
-            LogQueryParam logQueryParam = gson.fromJson(gson.toJson(gridExample), LogQueryParam.class);
-            if (StringUtils.isNotBlank(keyWord)) {
-                List<FolderItem> types = types();
-                ids = types.stream().filter(item -> item.getName().toLowerCase().contains(keyWord.toLowerCase())).map(FolderItem::getId).collect(Collectors.toList());
-                if (CollectionUtils.isNotEmpty(ids))
-                    logQueryParam.setUnionIds(ids);
-            }
-            List<SysLogWithBLOBs> lists = extSysLogMapper.query(logQueryParam);
+            List<SysLogWithBLOBs> lists = extSysLogMapper.query(request);
             List<String[]> details = lists.stream().map(item -> {
                 String operateTypeName = SysLogConstants.operateTypeName(item.getOperateType());
                 String sourceTypeName = SysLogConstants.sourceTypeName(item.getSourceType());
@@ -422,7 +311,7 @@ public class LogService {
             response.setContentType("application/vnd.ms-excel");
             //文件名称
             String fileName = "DataEase操作日志";
-            String encodeFileName = URLEncoder.encode(fileName, "UTF-8");
+            String encodeFileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
             response.setHeader("Content-disposition", "attachment;filename=" + encodeFileName + ".xlsx");
             wb.write(outputStream);
             outputStream.flush();
